--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -136,7 +136,9 @@ interface Vlan1205
    description L3VPN-EXIT-POINT
    no shutdown
    vrf ATM
-   ip address virtual 10.2.1.1/24
+   ip address 10.2.1.1/24
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
@@ -159,6 +161,11 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+route-map RM-BGP-TO-OSPF permit 10
+   description Redistribute BGP to OSPF
+   match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set tag 1205
+!
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
    description Configure LP to 90 for ATM
    match community CL-INGRESS-ATM-LP-90
@@ -177,8 +184,6 @@ router bgp 65000
    router-id 10.255.1.5
    no bgp default ipv4-unicast
    maximum-paths 4 ecmp 4
-   neighbor ATM-BACKBONE peer group
-   neighbor ATM-BACKBONE description ATM CONNECTITVITY
    neighbor MPLS-OVERLAY-PEERS peer group
    neighbor MPLS-OVERLAY-PEERS remote-as 65000
    neighbor MPLS-OVERLAY-PEERS update-source Loopback0
@@ -208,7 +213,6 @@ router bgp 65000
       neighbor MPLS-OVERLAY-PEERS activate
    !
    address-family ipv4
-      neighbor ATM-BACKBONE activate
       no neighbor MPLS-OVERLAY-PEERS activate
    !
    vrf ATM
@@ -216,13 +220,8 @@ router bgp 65000
       route-target import evpn 12:12
       route-target export evpn 12:12
       router-id 10.255.1.5
-      neighbor 10.2.1.21 peer group ATM-BACKBONE
-      neighbor 10.2.1.21 remote-as 65102
-      neighbor 10.2.1.21 description ATM CONNECTITVITY S2-CE01
       redistribute connected
-      !
-      address-family ipv4
-         neighbor 10.2.1.21 activate
+      redistribute ospf
    !
    vrf ETHERNET_VPN
       rd 10.255.1.5:11
@@ -248,6 +247,12 @@ router isis CORE
    !
    segment-routing mpls
       no shutdown
+!
+router ospf 1205 vrf ATM
+   router-id 10.255.1.5
+   passive-interface default
+   no passive-interface Vlan1205
+   redistribute bgp route-map RM-BGP-TO-OSPF
 !
 management ssh
    authentication empty-passwords permit
