--- a/config-builder/config_backup/s2-ce01_pre_running-config.conf
+++ b/config-builder/config_backup/s2-ce01_pre_running-config.conf
@@ -81,6 +81,8 @@ interface Vlan1205
    description L3VPN_Only - VRF ATM
    vrf ATM
    ip address 10.2.1.21/24
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 ip routing
 ip routing vrf ATM
@@ -94,25 +96,17 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
-router bgp 65102
-   neighbor MPLS-BACKBONE peer group
-   neighbor MPLS-BACKBONE remote-as 65000
-   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
-   !
-   vrf ATM
-      neighbor 10.2.1.1 peer group MPLS-BACKBONE
-      neighbor 10.2.1.1 description MPLS CONNECTITVITY S2-PE01
-      redistribute connected
-      !
-      address-family ipv4
-         neighbor 10.2.1.1 activate
-!
 router multicast
    ipv4
       software-forwarding kernel
    !
    ipv6
       software-forwarding kernel
+!
+router ospf 1205 vrf ATM
+   no passive-interface Vlan1205
+   max-lsa 12000
+   dn-bit-ignore
 !
 management ssh
    authentication empty-passwords permit
