--- a/config-builder/intended/configs/s1-pe01.cfg
+++ b/config-builder/intended/configs/s1-pe01.cfg
@@ -116,6 +116,11 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+route-map RM-BGP-TO-OSPF permit 10
+   description Redistribute BGP to OSPF
+   match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set tag 1205
+!
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
    description Configure LP to 90 for ATM
    match community CL-INGRESS-ATM-LP-90
