--- a/config-builder/intended/configs/s1-pe03.cfg
+++ b/config-builder/intended/configs/s1-pe03.cfg
@@ -161,6 +161,11 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+route-map RM-BGP-TO-OSPF permit 10
+   description Redistribute BGP to OSPF
+   match ip address prefix-list PL-ATM-FAKE-PREFIX
+   set tag 1205
+!
 route-map RM-MANAGE-WITH-COMMUNITIES permit 10
    description Configure LP to 90 for ATM
    match community CL-INGRESS-ATM-LP-90
@@ -217,6 +222,7 @@ router bgp 65000
       neighbor 10.2.0.1 remote-as 65101
       neighbor 10.2.0.1 description ATM CONNECTITVITY S1-CE03
       redistribute connected
+      redistribute ospf
       !
       address-family ipv4
          neighbor 10.2.0.1 activate
@@ -245,6 +251,11 @@ router isis CORE
    !
    segment-routing mpls
       no shutdown
+!
+router ospf 1205 vrf ATM
+   router-id 10.255.1.3
+   passive-interface default
+   redistribute bgp route-map RM-BGP-TO-OSPF
 !
 management ssh
    authentication empty-passwords permit
