--- a/config-builder/intended/configs/s2-ce01.cfg
+++ b/config-builder/intended/configs/s2-ce01.cfg
@@ -72,6 +72,8 @@ interface Vlan1205
    no shutdown
    vrf ATM
    ip address 10.2.1.21/24
+   ip ospf network point-to-point
+   ip ospf area 0.0.0.0
 !
 ip routing
 ip routing vrf ATM
@@ -85,18 +87,10 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
-router bgp 65102
-   neighbor MPLS-BACKBONE peer group
-   neighbor MPLS-BACKBONE remote-as 65000
-   neighbor MPLS-BACKBONE description MPLS CONNECTITVITY
-   !
-   vrf ATM
-      neighbor 10.2.1.1 peer group MPLS-BACKBONE
-      neighbor 10.2.1.1 description MPLS CONNECTITVITY S2-PE01
-      redistribute connected
-      !
-      address-family ipv4
-         neighbor 10.2.1.1 activate
+router ospf 1205 vrf ATM
+   no passive-interface Vlan1205
+   dn-bit-ignore
+
 !
 management ssh
    authentication empty-passwords permit
