--- a/config-builder/intended/structured_configs/s1-pe03.yml
+++ b/config-builder/intended/structured_configs/s1-pe03.yml
@@ -63,6 +63,8 @@ router_bgp:
     redistribute:
       connected:
         enabled: true
+      ospf:
+        enabled: true
     address_family_ipv4:
       neighbors:
       - ip_address: 10.2.0.1
@@ -303,6 +305,17 @@ vlan_interfaces:
   shutdown: false
   ip_address_virtual: 10.1.3.1/24
   vrf: ETHERNET_VPN
+router_ospf:
+  process_ids:
+  - id: 1205
+    vrf: ATM
+    passive_interface_default: true
+    no_passive_interfaces: []
+    router_id: 10.255.1.3
+    redistribute:
+      bgp:
+        enabled: true
+        route_map: RM-BGP-TO-OSPF
 metadata:
   platform: ceos
 ip_community_lists:
@@ -317,6 +330,15 @@ ip_community_lists:
     communities:
     - 65000:10110
 route_maps:
+- name: RM-BGP-TO-OSPF
+  sequence_numbers:
+  - sequence: 10
+    type: permit
+    description: Redistribute BGP to OSPF
+    match:
+    - ip address prefix-list PL-ATM-FAKE-PREFIX
+    set:
+    - tag 1205
 - name: RM-MANAGE-WITH-COMMUNITIES
   sequence_numbers:
   - sequence: 10
