feat(evpn,irb): Add EVPN IRB use-case

--- a/config-builder/config_backup/s1-ce01_pre_running-config.conf
+++ b/config-builder/config_backup/s1-ce01_pre_running-config.conf
@@ -2,6 +2,7 @@
 ! device: s1-ce01 (cEOSLab, EOS-4.33.0F-39050855.4330F (engineering build))
 !
 no aaa root
+aaa authentication policy local allow-nopassword-remote-login
 !
 username admin privilege 15 role network-admin nopassword
 username ansible privilege 15 role network-admin secret sha512 $6$Dzu11L7yp9j3nCM9$FSptxMPyIL555OMO.ldnjDXgwZmrfMYwHSr0uznE5Qoqvd9a6UdjiFcJUhGLtvXVZR1r.A/iF5aAt50hf/EK4/
@@ -48,27 +49,50 @@ system l1
    unsupported speed action error
    unsupported error-correction action error
 !
+vlan 1101
+   name ETHERNET-VPN-IRB-1101
+!
+vrf instance ATM
+!
 vrf instance ETHERNET_VPN
+!
+vrf instance IRB
 !
 vrf instance MGMT
 !
 aaa authorization exec default local
 !
-interface Ethernet1
-   description to s1-pe01 ethernet4
+interface Port-Channel1
+!
+interface Port-Channel4
+   description to s1-ce01-po1
    switchport mode trunk
 !
+interface Ethernet1
+   description to s1-pe01 ethernet4
+   channel-group 1 mode active
+!
 interface Ethernet2
+   description to s1-pe02 ethernet4
+   channel-group 1 mode active
 !
 interface Management0
    description oob_management
    vrf MGMT
    ip address 192.168.2.211/24
 !
+interface Vlan1101
+   description vrf-irb-vlan1101
+   vrf IRB
+   ip address 10.1.1.11/24
+!
 ip routing
+ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf IRB
 ip routing vrf MGMT
 !
+ip route vrf IRB 10.1.0.0/16 10.1.1.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 !
 ntp local-interface Management0
