--- a/config-builder/host_vars/s1-ce03/network.yml
+++ b/config-builder/host_vars/s1-ce03/network.yml
@@ -1,12 +1,16 @@
 vlans:
-  - name: SVC01_C1_VLAN_SITE01_PE03
-    id: 1113
+- name: ETHERNET-VPN-IRB-1103
+  id: 1103
 
 ethernet_interfaces:
   - name: Ethernet1
     description: to s1-pe02 ethernet4
-    vlans: "1-4094"
-    mode: "trunk"
+    # vlans: "1-4094"
+    switchport:
+      enabled: True
+      mode: "trunk"
+      trunk:
+        allowed_vlan: '1-4094'
 
   - name: Ethernet2
     switchport:
@@ -26,30 +30,18 @@ ethernet_interfaces:
 port_channel_interfaces:
 
 vlan_interfaces:
-- name: "Vlan1113"
-  description: SVC01_C1_VLAN_SITE01_PE03 - VRF ETHERNET_VPN
+- name: "Vlan1103"
+  description: vrf-irb-vlan1101
   shutdown: False
-  vrf: ETHERNET_VPN
+  vrf: IRB
   ip_address: "10.1.3.{{ device_id }}/24"
-#   vrrp_ids:
-#     - id: 10
-#       priority_level: 100
-#       ipv4:
-#         address: 10.18.10.254
-#         version: 3
-
-# - name: "Vlan2001"
-#   description: vrf-bkp-xco-site01
-#   shutdown: False
-#   vrf: BKP
-#   ip_address: "10.200.1.{{ device_id }}/24"
 
 static_routes:
   - vrf: "{{ management_vrf_name }}"
     destination_address_prefix: 0.0.0.0/0
     gateway: 192.168.2.1
-  - vrf: ETHERNET_VPN
-    destination_address_prefix: 0.0.0.0/0
+  - vrf: IRB
+    destination_address_prefix: 10.1.0.0/16
     gateway: 10.1.3.1
   - vrf: ATM
     destination_address_prefix: 10.2.254.0/24
