feat(evpn,irb): Add L2VLAN in scenario

--- a/config-builder/config_backup/s1-ce03_pre_running-config.conf
+++ b/config-builder/config_backup/s1-ce03_pre_running-config.conf
@@ -56,6 +56,8 @@ vrf instance ETHERNET_VPN
 !
 vrf instance IRB
 !
+vrf instance L2VLAN
+!
 vrf instance MGMT
 !
 aaa authorization exec default local
@@ -78,15 +80,16 @@ interface Management0
    vrf MGMT
    ip address 192.168.2.212/24
 !
-interface Vlan1105
+interface Vlan1103
    description vrf-irb-vlan1101
    vrf IRB
-   ip address 10.1.1.12/24
+   ip address 10.1.3.13/24
 !
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
