--- a/config-builder/host_vars/s1-ce03/network.yml
+++ b/config-builder/host_vars/s1-ce03/network.yml
@@ -1,6 +1,8 @@
 vlans:
 - name: ETHERNET-VPN-IRB-1103
   id: 1103
+- name: ETHERNET-VPN-L2VLAN-1199
+  id: 1199
 
 ethernet_interfaces:
   - name: Ethernet1
@@ -30,11 +32,17 @@ ethernet_interfaces:
 port_channel_interfaces:
 
 vlan_interfaces:
-- name: "Vlan1103"
-  description: vrf-irb-vlan1101
-  shutdown: False
-  vrf: IRB
-  ip_address: "10.1.3.{{ device_id }}/24"
+  - name: "Vlan1103"
+    description: vrf-irb-vlan1101
+    shutdown: False
+    vrf: IRB
+    ip_address: "10.1.3.{{ device_id }}/24"
+
+  - name: "Vlan1199"
+    description: vrf-irb-vlan1199
+    shutdown: False
+    vrf: L2VLAN
+    ip_address: "10.1.99.{{ device_id }}/24"
 
 static_routes:
   - vrf: "{{ management_vrf_name }}"
