--- a/config-builder/intended/configs/s1-ce01.cfg
+++ b/config-builder/intended/configs/s1-ce01.cfg
@@ -29,11 +29,16 @@ dns domain atd.lab
 vlan 1101
    name ETHERNET-VPN-IRB-1101
 !
+vlan 1199
+   name ETHERNET-VPN-L2VLAN-1199
+!
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
 vrf instance IRB
+!
+vrf instance L2VLAN
 !
 vrf instance MGMT
 !
@@ -76,10 +81,17 @@ interface Vlan1101
    vrf IRB
    ip address 10.1.1.11/24
 !
+interface Vlan1199
+   description vrf-irb-vlan1199
+   no shutdown
+   vrf L2VLAN
+   ip address 10.1.99.11/24
+!
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 !
 ip route vrf IRB 10.1.0.0/16 10.1.1.1
