--- a/config-builder/intended/configs/s1-ce04.cfg
+++ b/config-builder/intended/configs/s1-ce04.cfg
@@ -35,6 +35,8 @@ vrf instance ETHERNET_VPN
 !
 vrf instance IRB
 !
+vrf instance L2VLAN
+!
 vrf instance MGMT
 !
 management api http-commands
@@ -74,12 +76,13 @@ interface Vlan1114
    description SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
    no shutdown
    vrf ETHERNET_VPN
-   ip address 10.1.4.13/24
+   ip address 10.1.4.14/24
 !
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
