--- a/config-builder/intended/configs/s2-ce01.cfg
+++ b/config-builder/intended/configs/s2-ce01.cfg
@@ -38,6 +38,8 @@ vrf instance ETHERNET_VPN
 !
 vrf instance IRB
 !
+vrf instance L2VLAN
+!
 vrf instance MGMT
 !
 management api http-commands
@@ -80,6 +82,7 @@ ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 !
 ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.5.1
