--- a/config-builder/config_backup/s1-ce03_post_running-config.conf
+++ b/config-builder/config_backup/s1-ce03_post_running-config.conf
@@ -50,11 +50,16 @@ system l1
 vlan 1103
    name ETHERNET-VPN-IRB-1103
 !
+vlan 1199
+   name ETHERNET-VPN-L2VLAN-1199
+!
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
 vrf instance IRB
+!
+vrf instance L2VLAN
 !
 vrf instance MGMT
 !
@@ -81,12 +86,18 @@ interface Management0
 interface Vlan1103
    description vrf-irb-vlan1101
    vrf IRB
-   ip address 10.1.3.12/24
+   ip address 10.1.3.13/24
+!
+interface Vlan1199
+   description vrf-irb-vlan1199
+   vrf L2VLAN
+   ip address 10.1.99.13/24
 !
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
 ip routing vrf IRB
+ip routing vrf L2VLAN
 ip routing vrf MGMT
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
