--- a/config-builder/intended/configs/s1-pe03.cfg
+++ b/config-builder/intended/configs/s1-pe03.cfg
@@ -42,6 +42,9 @@ clock timezone Europe/Paris
 vlan 1103
    name ETHERNET_VPN_IRB_S1_CE03
 !
+vlan 1199
+   name ETHERNET_VPN_L2VLAN
+!
 vrf instance ATM
 !
 vrf instance IRB
@@ -207,6 +210,11 @@ router bgp 65000
       redistribute learned
       !
       redistribute router-mac system default-gateway
+   !
+   vlan 1199
+      rd 10.255.1.3:11199
+      route-target both 11199:11199
+      redistribute learned
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
