feat(evpn): Add Firewall connected to fabric with ESI and BGP (#9)
Reviewed-on: https://git.as73.inetsix.net/labs/clab-eos-mpls-isis-sr/pulls/9
Co-authored-by: Thomas Grimonet <thomas.grimonet@gmail.com>
Co-committed-by: Thomas Grimonet <thomas.grimonet@gmail.com>

--- a/config-builder/group_vars/backbone/settings.yml
+++ b/config-builder/group_vars/backbone/settings.yml
@@ -28,6 +28,7 @@ bgp_peer_groups:
 # FIXME: This is a temporary solution to avoid the issue with the
 # Extension to get a fully configured
 # neighbor default encapsulation mpls next-hop-self source-interface Loopback0
+# Reference to Arista BUG 759416
 # If not, only encapsulation mpls is configured with the key 'default_evpn_encapsulation: mpls'
 custom_core_router_bgp:
   as_notation: "asdot"
