--- a/config-builder/group_vars/cpe/base.yml
+++ b/config-builder/group_vars/cpe/base.yml
@@ -32,3 +32,6 @@ vrfs:
   - name: L2VLAN
     tenant: ETHERNET_VPN_IRB
     ip_routing: true
+  - name: FW
+    tenant: FIREWALL-BGP
+    ip_routing: true
