--- a/config-builder/intended/configs/s1-ce04.cfg
+++ b/config-builder/intended/configs/s1-ce04.cfg
@@ -33,6 +33,8 @@ vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
+vrf instance FW
+!
 vrf instance IRB
 !
 vrf instance L2VLAN
@@ -81,6 +83,7 @@ interface Vlan1114
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
