--- a/config-builder/host_vars/s1-ce01/network.yml
+++ b/config-builder/host_vars/s1-ce01/network.yml
@@ -3,6 +3,8 @@ vlans:
   id: 1101
 - name: ETHERNET-VPN-L2VLAN-1199
   id: 1199
+- name: FIREWALL-BGP-EXIT-S1-NORTH
+  id: 1301
 
 ethernet_interfaces:
   - name: Ethernet1
@@ -39,6 +41,11 @@ vlan_interfaces:
   shutdown: False
   vrf: L2VLAN
   ip_address: "10.1.99.{{ device_id }}/24"
+- name: "Vlan1301"
+  description: vrf-irb-vlan1301
+  shutdown: False
+  vrf: FW
+  ip_address: "10.3.1.{{ device_id }}/24"
 
 static_routes:
   - vrf: "{{ management_vrf_name }}"
@@ -47,3 +54,6 @@ static_routes:
   - vrf: "IRB"
     destination_address_prefix: 10.1.0.0/16
     gateway: 10.1.1.1
+  - vrf: "FW"
+    destination_address_prefix: 10.3.255.0/24
+    gateway: 10.3.1.1
