--- a/config-builder/intended/configs/s1-ce01.cfg
+++ b/config-builder/intended/configs/s1-ce01.cfg
@@ -32,9 +32,14 @@ vlan 1101
 vlan 1199
    name ETHERNET-VPN-L2VLAN-1199
 !
+vlan 1301
+   name FIREWALL-BGP-EXIT-S1-NORTH
+!
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance FW
 !
 vrf instance IRB
 !
@@ -87,19 +92,45 @@ interface Vlan1199
    vrf L2VLAN
    ip address 10.1.99.11/24
 !
+interface Vlan1301
+   description vrf-irb-vlan1301
+   no shutdown
+   vrf FW
+   ip address 10.3.1.11/24
+!
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
 !
+ip route vrf FW 10.3.255.0/24 10.3.1.1
 ip route vrf IRB 10.1.0.0/16 10.1.1.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
 !
 ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
+!
+router bgp 65103
+   router-id 10.255.1.11
+   bgp default ipv4-unicast
+   maximum-paths 4 ecmp 4
+   neighbor MPLS-BACKBONE-FW-VRF peer group
+   neighbor MPLS-BACKBONE-FW-VRF remote-as 65000
+   neighbor MPLS-BACKBONE-FW-VRF bfd
+   neighbor MPLS-BACKBONE-FW-VRF ebgp-multihop 10
+   neighbor MPLS-BACKBONE-FW-VRF send-community
+   neighbor MPLS-BACKBONE-FW-VRF maximum-routes 0
+   !
+   vrf FW
+      neighbor 10.3.255.1 peer group MPLS-BACKBONE-FW-VRF
+      neighbor 10.3.255.1 description s1-pe01-Loopback1013
+      neighbor 10.3.255.2 peer group MPLS-BACKBONE-FW-VRF
+      neighbor 10.3.255.2 description s1-pe02-Loopback1013
+      redistribute connected
 !
 management ssh
    authentication empty-passwords permit
