--- a/config-builder/intended/configs/s1-ce03.cfg
+++ b/config-builder/intended/configs/s1-ce03.cfg
@@ -36,6 +36,8 @@ vrf instance ATM
 !
 vrf instance ETHERNET_VPN
 !
+vrf instance FW
+!
 vrf instance IRB
 !
 vrf instance L2VLAN
@@ -90,6 +92,7 @@ interface Vlan1199
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
