--- a/config-builder/intended/configs/s1-pe02.cfg
+++ b/config-builder/intended/configs/s1-pe02.cfg
@@ -45,6 +45,11 @@ vlan 1101
 vlan 1199
    name ETHERNET_VPN_L2VLAN
 !
+vlan 1301
+   name FIREWALL-BGP-EXIT-S1-NORTH
+!
+vrf instance FW
+!
 vrf instance IRB
 !
 vrf instance MGMT
@@ -123,6 +128,13 @@ interface Loopback1011
    vrf IRB
    ip address 10.1.255.2/32
 !
+interface Loopback1013
+   description SVC_FIREWALL_LOOPBACK
+   no shutdown
+   vrf FW
+   ip address 10.3.255.2/32
+   hardware forwarding id
+!
 interface Management0
    description OOB_MANAGEMENT
    no shutdown
@@ -135,9 +147,17 @@ interface Vlan1101
    vrf IRB
    ip address virtual 10.1.1.1/24
 !
+interface Vlan1301
+   description FIREWALL-BGP-EXIT-S1-NORTH
+   no shutdown
+   vrf FW
+   ip address 10.3.1.3/24
+   ip virtual-router address 10.3.1.1
+!
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
+ip routing vrf FW
 ip routing vrf IRB
 no ip routing vrf MGMT
 !
@@ -207,6 +227,13 @@ router bgp 65000
       route-target both 11199:11199
       redistribute learned
    !
+   vlan 1301
+      rd 10.255.1.2:14301
+      route-target both 14301:14301
+      redistribute learned
+      !
+      redistribute router-mac system default-gateway
+   !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
       neighbor MPLS-OVERLAY-PEERS activate
@@ -214,6 +241,22 @@ router bgp 65000
    !
    address-family ipv4
       no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf FW
+      rd 10.255.1.2:13
+      route-target import evpn 13:13
+      route-target export evpn 13:13
+      router-id 10.255.1.2
+      neighbor 10.3.1.11 peer group FIREWALL-BGP
+      neighbor 10.3.1.11 remote-as 65103
+      neighbor 10.3.1.11 update-source Loopback1013
+      neighbor 10.3.1.11 description FIREWALL-BGP S1-CE01
+      neighbor 10.3.1.11 ebgp-multihop 10
+      neighbor 10.3.1.11 send-community standard extended
+      redistribute connected
+      !
+      address-family ipv4
+         neighbor 10.3.1.11 activate
    !
    vrf IRB
       rd 10.255.1.2:11
