feat(system): Add maintenance for PE nodes

--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -121,6 +121,10 @@ interface Vlan1205
    ip ospf network point-to-point
    ip ospf area 0.0.0.0
 !
+group interface serverLinkGroup
+   interface Ethernet4
+   maintenance profile interface shutdownIntf
+!
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
@@ -132,6 +136,15 @@ ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
    seq 10 permit 10.2.254.0/24
+!
+maintenance
+   profile interface shutdownIntf
+      shutdown max-delay 0
+   profile unit onBootDelay
+      on-boot duration 600
+   unit serverLinks
+      group interface shutdownIntf
+      profile unit onBootDelay
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
