--- a/config-builder/intended/configs/s1-pe01.cfg
+++ b/config-builder/intended/configs/s1-pe01.cfg
@@ -154,6 +154,10 @@ interface Vlan1301
    ip address 10.3.1.2/24
    ip virtual-router address 10.3.1.1
 !
+group interface serverLinkGroup
+   interface Ethernet4
+   maintenance profile interface shutdownIntf
+!
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
@@ -166,6 +170,15 @@ ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
    seq 10 permit 10.2.254.0/24
+!
+maintenance
+   profile interface shutdownIntf
+      shutdown max-delay 0
+   profile unit onBootDelay
+      on-boot duration 600
+   unit serverLinks
+      group interface shutdownIntf
+      profile unit onBootDelay
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
