--- a/config-builder/intended/configs/s1-pe03.cfg
+++ b/config-builder/intended/configs/s1-pe03.cfg
@@ -141,6 +141,10 @@ interface Vlan1103
    vrf IRB
    ip address virtual 10.1.3.1/24
 !
+group interface serverLinkGroup
+   interface Ethernet4
+   maintenance profile interface shutdownIntf
+!
 ip virtual-router mac-address 00:1c:73:00:dc:00
 !
 ip routing
@@ -153,6 +157,15 @@ ip community-list CL-INGRESS-ATM-LP-110 permit 65000:10110
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
    seq 10 permit 10.2.254.0/24
+!
+maintenance
+   profile interface shutdownIntf
+      shutdown max-delay 0
+   profile unit onBootDelay
+      on-boot duration 600
+   unit serverLinks
+      group interface shutdownIntf
+      profile unit onBootDelay
 !
 ip route vrf MGMT 10.73.0.0/16 192.168.2.1
 !
