--- a/config-builder/intended/structured_configs/s1-pe04.yml
+++ b/config-builder/intended/structured_configs/s1-pe04.yml
@@ -237,3 +237,24 @@ prefix_lists:
   sequence_numbers:
   - sequence: 10
     action: permit 10.2.254.0/24
+interface_groups:
+- name: serverLinkGroup
+  interfaces:
+  - Ethernet4
+  interface_maintenance_profiles:
+  - shutdownIntf
+maintenance:
+  interface_profiles:
+  - name: shutdownIntf
+    shutdown:
+      max_delay: 0
+  unit_profiles:
+  - name: onBootDelay
+    on_boot:
+      duration: 600
+  units:
+  - name: serverLinks
+    groups:
+      interface_groups:
+      - shutdownIntf
+    profile: onBootDelay
