--- a/config-builder/intended/configs/s1-ce01.cfg
+++ b/config-builder/intended/configs/s1-ce01.cfg
@@ -47,6 +47,8 @@ vrf instance L2VLAN
 !
 vrf instance MGMT
 !
+vrf instance VPWS
+!
 management api http-commands
    protocol https
    no shutdown
@@ -105,6 +107,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 !
 ip route vrf FW 10.3.255.0/24 10.3.1.1
 ip route vrf IRB 10.1.0.0/16 10.1.1.1
