--- a/config-builder/intended/configs/s1-pe04.cfg
+++ b/config-builder/intended/configs/s1-pe04.cfg
@@ -53,6 +53,12 @@ management api http-commands
 aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
+interface eth6
+   no shutdown
+   no switchport
+   no lldp transmit
+   no lldp receive
+!
 interface Ethernet1
    description P2P_s1-p01_Ethernet4
    no shutdown
@@ -154,6 +160,12 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+patch panel
+   patch s1-ce03-s1-ce04
+      connector 1 interface eth6
+      connector 2 pseudowire bgp vpws VPWS pseudowire s1-ce03-s1-ce04
+   !
+!
 route-map RM-BGP-TO-OSPF permit 10
    description Redistribute BGP to OSPF
    match ip address prefix-list PL-ATM-FAKE-PREFIX
@@ -175,6 +187,56 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 90
 !
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
+!
+router bgp 65000
+   bgp asn notation asdot
+   router-id 10.255.1.4
+   no bgp default ipv4-unicast
+   maximum-paths 4 ecmp 4
+   neighbor ATM-BACKBONE peer group
+   neighbor ATM-BACKBONE description ATM CONNECTITVITY
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
+   neighbor MPLS-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.4 description s2-p02_Loopback0
+   !
+   vpws VPWS
+      rd 10.255.1.4:14000
+      route-target import export evpn 14000:14000
+      !
+      pseudowire s1-ce03-s1-ce04
+         evpn vpws id local 4 remote 3
+   !
+   address-family evpn
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS encapsulation mpls
+   !
+   address-family ipv4
+      neighbor ATM-BACKBONE activate
+      no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.4:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.4
+      neighbor 10.2.0.3 peer group ATM-BACKBONE
+      neighbor 10.2.0.3 remote-as 65101
+      neighbor 10.2.0.3 description ATM CONNECTITVITY S1-CE04
+      redistribute connected
+      redistribute ospf
+      !
+      address-family ipv4
+         neighbor 10.2.0.3 activate
 !
 router isis CORE
    net 49.0001.0102.5500.1004.00
