--- a/config-builder/intended/configs/s2-pe01.cfg
+++ b/config-builder/intended/configs/s2-pe01.cfg
@@ -176,6 +176,45 @@ route-map RM-MANAGE-WITH-COMMUNITIES permit 90
 router bfd
    multihop interval 300 min-rx 300 multiplier 3
 !
+router bgp 65000
+   bgp asn notation asdot
+   router-id 10.255.1.5
+   no bgp default ipv4-unicast
+   maximum-paths 4 ecmp 4
+   neighbor MPLS-OVERLAY-PEERS peer group
+   neighbor MPLS-OVERLAY-PEERS remote-as 65000
+   neighbor MPLS-OVERLAY-PEERS update-source Loopback0
+   neighbor MPLS-OVERLAY-PEERS bfd
+   neighbor MPLS-OVERLAY-PEERS route-map RM-MANAGE-WITH-COMMUNITIES in
+   neighbor MPLS-OVERLAY-PEERS password 7 Q4fqtbqcZ7oQuKfuWtNGRQ==
+   neighbor MPLS-OVERLAY-PEERS send-community
+   neighbor MPLS-OVERLAY-PEERS maximum-routes 0
+   neighbor 10.255.0.1 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.1 description s1-p01_Loopback0
+   neighbor 10.255.0.4 peer group MPLS-OVERLAY-PEERS
+   neighbor 10.255.0.4 description s2-p02_Loopback0
+   !
+   vlan 1205
+      rd 10.255.1.5:13205
+      route-target both 13205:13205
+      redistribute learned
+   !
+   address-family evpn
+      neighbor default encapsulation mpls next-hop-self source-interface Loopback0
+      neighbor MPLS-OVERLAY-PEERS activate
+      neighbor MPLS-OVERLAY-PEERS encapsulation mpls
+   !
+   address-family ipv4
+      no neighbor MPLS-OVERLAY-PEERS activate
+   !
+   vrf ATM
+      rd 10.255.1.5:12
+      route-target import evpn 12:12
+      route-target export evpn 12:12
+      router-id 10.255.1.5
+      redistribute connected
+      redistribute ospf
+!
 router isis CORE
    net 49.0001.0102.5500.1005.00
    router-id ipv4 10.255.1.5
