--- a/config-builder/config_backup/s1-ce03_pre_running-config.conf
+++ b/config-builder/config_backup/s1-ce03_pre_running-config.conf
@@ -50,15 +50,25 @@ system l1
 vlan 1103
    name ETHERNET-VPN-IRB-1103
 !
+vlan 1199
+   name ETHERNET-VPN-L2VLAN-1199
+!
+vlan 1401
+   name VPWS-1401
+!
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
+!
+vrf instance FW
 !
 vrf instance IRB
 !
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 !
 aaa authorization exec default local
 !
@@ -75,6 +85,10 @@ interface Ethernet2.101
    vrf ATM
    ip address 10.2.0.1/31
 !
+interface Ethernet3
+   description to s1-pe03 ethernet6
+   switchport mode trunk
+!
 interface Management0
    description oob_management
    vrf MGMT
@@ -85,12 +99,24 @@ interface Vlan1103
    vrf IRB
    ip address 10.1.3.13/24
 !
+interface Vlan1199
+   description vrf-irb-vlan1199
+   vrf L2VLAN
+   ip address 10.1.99.13/24
+!
+interface Vlan1401
+   description vrf-vpws
+   vrf VPWS
+   ip address 10.4.1.13/24
+!
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
+ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
    seq 10 permit 10.2.254.0/24
