--- a/config-builder/host_vars/s1-ce04/network.yml
+++ b/config-builder/host_vars/s1-ce04/network.yml
@@ -1,6 +1,8 @@
 vlans:
   - name: SVC01_C1_VLAN_SITE01_PE04
     id: 1114
+  - name: VPWS-1401
+    id: 1401
 
 ethernet_interfaces:
   - name: Ethernet1
@@ -27,26 +29,41 @@ ethernet_interfaces:
       vlan: 101
     vrf: ATM
 
+  - name: Ethernet3
+    description: to s1-pe04 ethernet6
+    # vlans: "1-4094"
+    switchport:
+      enabled: True
+      mode: "trunk"
+      trunk:
+        allowed_vlan: '1-4094'
+
 port_channel_interfaces:
 
 vlan_interfaces:
-- name: "Vlan1114"
-  description: SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
-  shutdown: False
-  vrf: ETHERNET_VPN
-  ip_address: "10.1.4.{{ device_id }}/24"
-#   vrrp_ids:
-#     - id: 10
-#       priority_level: 100
-#       ipv4:
-#         address: 10.18.10.254
-#         version: 3
+  - name: "Vlan1114"
+    description: SVC01_C1_VLAN_SITE01_PE04 - VRF ETHERNET_VPN
+    shutdown: False
+    vrf: ETHERNET_VPN
+    ip_address: "10.1.4.{{ device_id }}/24"
+  #   vrrp_ids:
+  #     - id: 10
+  #       priority_level: 100
+  #       ipv4:
+  #         address: 10.18.10.254
+  #         version: 3
 
-# - name: "Vlan2001"
-#   description: vrf-bkp-xco-site01
-#   shutdown: False
-#   vrf: BKP
-#   ip_address: "10.200.1.{{ device_id }}/24"
+  # - name: "Vlan2001"
+  #   description: vrf-bkp-xco-site01
+  #   shutdown: False
+  #   vrf: BKP
+  #   ip_address: "10.200.1.{{ device_id }}/24"
+
+  - name: "Vlan1401"
+    description: vrf-vpws
+    shutdown: False
+    vrf: VPWS
+    ip_address: "10.4.1.{{ device_id }}/24"
 
 static_routes:
   - vrf: "{{ management_vrf_name }}"
