--- a/config-builder/intended/configs/s1-ce03.cfg
+++ b/config-builder/intended/configs/s1-ce03.cfg
@@ -32,6 +32,9 @@ vlan 1103
 vlan 1199
    name ETHERNET-VPN-L2VLAN-1199
 !
+vlan 1401
+   name VPWS-1401
+!
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
@@ -43,6 +46,8 @@ vrf instance IRB
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 !
 management api http-commands
    protocol https
@@ -71,6 +76,12 @@ interface Ethernet2.101
    vrf ATM
    ip address 10.2.0.1/31
 !
+interface Ethernet3
+   description to s1-pe03 ethernet6
+   switchport trunk allowed vlan 1-4094
+   switchport mode trunk
+   switchport
+!
 interface Management0
    description oob_management
    no shutdown
@@ -89,6 +100,12 @@ interface Vlan1199
    vrf L2VLAN
    ip address 10.1.99.13/24
 !
+interface Vlan1401
+   description vrf-vpws
+   no shutdown
+   vrf VPWS
+   ip address 10.4.1.13/24
+!
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
@@ -96,6 +113,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
    seq 10 permit 10.2.254.0/24
