--- a/config-builder/intended/configs/s1-ce04.cfg
+++ b/config-builder/intended/configs/s1-ce04.cfg
@@ -29,6 +29,9 @@ dns domain atd.lab
 vlan 1114
    name SVC01_C1_VLAN_SITE01_PE04
 !
+vlan 1401
+   name VPWS-1401
+!
 vrf instance ATM
 !
 vrf instance ETHERNET_VPN
@@ -40,6 +43,8 @@ vrf instance IRB
 vrf instance L2VLAN
 !
 vrf instance MGMT
+!
+vrf instance VPWS
 !
 management api http-commands
    protocol https
@@ -68,6 +73,12 @@ interface Ethernet2.101
    vrf ATM
    ip address 10.2.0.3/31
 !
+interface Ethernet3
+   description to s1-pe04 ethernet6
+   switchport trunk allowed vlan 1-4094
+   switchport mode trunk
+   switchport
+!
 interface Management0
    description oob_management
    no shutdown
@@ -80,6 +91,12 @@ interface Vlan1114
    vrf ETHERNET_VPN
    ip address 10.1.4.14/24
 !
+interface Vlan1401
+   description vrf-vpws
+   no shutdown
+   vrf VPWS
+   ip address 10.4.1.14/24
+!
 ip routing
 ip routing vrf ATM
 ip routing vrf ETHERNET_VPN
@@ -87,6 +104,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 !
 ip prefix-list PL-ATM-FAKE-PREFIX
    seq 10 permit 10.2.254.0/24
