--- a/config-builder/intended/configs/s1-pe03.cfg
+++ b/config-builder/intended/configs/s1-pe03.cfg
@@ -61,6 +61,12 @@ management api http-commands
 aaa authentication policy local allow-nopassword-remote-login
 aaa authorization exec default local
 !
+interface eth6
+   no shutdown
+   no switchport
+   no lldp transmit
+   no lldp receive
+!
 interface Ethernet1
    description P2P_s1-p01_Ethernet3
    no shutdown
@@ -175,6 +181,12 @@ ntp local-interface Management0
 ntp server vrf MGMT 5.39.80.51 burst iburst local-interface Management0
 ntp server vrf MGMT 193.52.136.2 prefer burst iburst local-interface Management0
 !
+patch panel
+   patch s1-ce03-s1-ce04
+      connector 1 interface eth6
+      connector 2 pseudowire bgp vpws VPWS pseudowire s1-ce03-s1-ce04
+   !
+!
 route-map RM-BGP-TO-OSPF permit 10
    description Redistribute BGP to OSPF
    match ip address prefix-list PL-ATM-FAKE-PREFIX
@@ -228,6 +240,14 @@ router bgp 65000
       rd 10.255.1.3:11199
       route-target both 11199:11199
       redistribute learned
+   !
+   vpws VPWS
+      rd 10.255.1.3:14000
+      route-target import export evpn 14000:14000
+      mpls control-word
+      !
+      pseudowire s1-ce03-s1-ce04
+         evpn vpws id local 3 remote 4
    !
    address-family evpn
       neighbor default encapsulation mpls next-hop-self source-interface Loopback0
