--- a/config-builder/intended/configs/s2-ce01.cfg
+++ b/config-builder/intended/configs/s2-ce01.cfg
@@ -44,6 +44,8 @@ vrf instance L2VLAN
 !
 vrf instance MGMT
 !
+vrf instance VPWS
+!
 management api http-commands
    protocol https
    no shutdown
@@ -87,6 +89,7 @@ ip routing vrf FW
 ip routing vrf IRB
 ip routing vrf L2VLAN
 ip routing vrf MGMT
+no ip routing vrf VPWS
 !
 ip route vrf ETHERNET_VPN 0.0.0.0/0 10.1.5.1
 ip route vrf MGMT 0.0.0.0/0 192.168.2.1
