--- a/config-builder/intended/structured_configs/s1-pe03.yml
+++ b/config-builder/intended/structured_configs/s1-pe03.yml
@@ -106,6 +106,16 @@ router_bgp:
       - 11199:11199
     redistribute_routes:
     - learned
+  vpws:
+  - name: VPWS
+    rd: 10.255.1.3:14000
+    route_targets:
+      import_export: 14000:14000
+    pseudowires:
+    - name: s1-ce03-s1-ce04
+      id_local: 3
+      id_remote: 4
+    mpls_control_word: true
   as_notation: asdot
 static_routes:
 - vrf: MGMT
@@ -273,6 +283,14 @@ ethernet_interfaces:
   encapsulation_dot1q:
     vlan: 101
   vrf: ATM
+- name: eth6
+  switchport:
+    enabled: false
+  peer_type: point_to_point_service
+  shutdown: false
+  lldp:
+    transmit: false
+    receive: false
 - name: Ethernet5
   switchport:
     enabled: false
@@ -289,6 +307,17 @@ ethernet_interfaces:
     mode: trunk
     trunk:
       allowed_vlan: 1-4094
+patch_panel:
+  patches:
+  - name: s1-ce03-s1-ce04
+    enabled: true
+    connectors:
+    - id: '1'
+      type: interface
+      endpoint: eth6
+    - id: '2'
+      type: pseudowire
+      endpoint: bgp vpws VPWS pseudowire s1-ce03-s1-ce04
 vlans:
 - id: 1103
   name: ETHERNET_VPN_IRB_S1_CE03
